# ros-cartpole-path-optimizer

./: CMakeLists.txt  package.xml
docs/examples/cplusplus/: CMakeLists.txt
include/path_optimizer/: DirectCollocationSolver.hpp  DirectTranscriptSolver.hpp  solver.hpp
main/: cart_pole.cpp  casadi_test.cpp  test.cpp
src/: DirectCollocationSolver.cpp  DirectTranscriptSolver.cpp  test.cpp
